fix: nav bar issues and h1 overlap

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -81,7 +81,7 @@ h1 {
 }
 
 .h1-light-bg:hover {
-  background-color: var(--lightest-grey);
+  background-color: var(--off-white);
   color: black;
   transform: scale(1.1) rotate(-2deg);
   box-shadow: 0 8px 20px rgba(0, 0, 0, 0.3);
